Added the Dialog to show the buckets.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
-POOL_ID=
-CLIENTAPP_ID=
-FED_POOL_ID=
-CUSTOMDOMAIN=
-REGION=
+POOL_ID=us-east-1_Bp9zDy6qR
+CLIENTAPP_ID=60ddjpgc4jfo2fair3gi49ll1
+FED_POOL_ID=us-east-1:146ea462-061b-42df-b8a5-a207d58555fb
+CUSTOMDOMAIN=ss
+REGION=us-east-1
