Bugfix on Maven requirements

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk</artifactId>
-            <version>1.11.202</version>
+            <version>1.11.232</version>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
@@ -41,6 +41,8 @@
                 <directory>src/main/resources</directory>
                 <includes>
                     <include>**/*.png</include>
+                    <include>**/*.jpg</include>
+                    <include>config.properties</include>
                 </includes>
             </resource>
         </resources>
