--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
-POOL_ID=us-east-2_6YCtYzCqz
-CLIENTAPP_ID=2m6u376uof58d3r2gua4n286v
-FED_POOL_ID=us-east-2:1e1f90b6-2214-4b32-979e-c966535c4355
-CUSTOMDOMAIN=ss
-REGION=us-east-2
+POOL_ID=us-east-1_7jaipg4Cp
+CLIENTAPP_ID=5tljfddhsb6knmqd8jmhra2cp
+FED_POOL_ID=us-east-1:50b30d3a-57c2-4771-8fdd-f2a12469a94a
+CUSTOMDOMAIN=ioe898d
+REGION=us-east-1
