Support client secrets
Read client secret from the CLIENT_SECRET property value and compute the SECRET_HASH value accordingly.
Fix existing code to include the SECRET_HASH value in both requests sent to cognito.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,6 @@
 POOL_ID=us-east-1_7jaipg4Cp
 CLIENTAPP_ID=5tljfddhsb6knmqd8jmhra2cp
+CLIENT_SECRET=
 FED_POOL_ID=us-east-1:50b30d3a-57c2-4771-8fdd-f2a12469a94a
 CUSTOMDOMAIN=ioe898d
 REGION=us-east-1
